two-third finished intro

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -74,45 +74,47 @@ knitr::opts_chunk$set(message = FALSE)
 knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 ```
  <!-- What is the theoretic meaning of the series study? -->
+
 # Introduction
+
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life]. Its importance is manifested in many ways in human cognition. For example, morality is a basic dimension of social cognition [@goodwin_moral_2014; goodwin_moral_2015; @abele_navigating_2020]. When judging a person, based on face or other information, the evaluation of the moral character is fast and without much effort [e.g., @willis_first_2006]. Also, moral character is the most defining trait to judge whether a person is him/herself as before, i.e, the continuity of identity [].
+[Morality is the central of human social life]. Its importance is manifested in many ways in human cognition. For example, morality is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006], moral judgment is common in daily life [].
 
-[The importance of moral character in person perception goes two ways for an individual]: She needs to both accurately evaluate whether other people are moral and behave in a way that she is perceived as a moral person, or at least not a morally bad person. The former was usually investigated as person perception in social psychology while the latter was studied separately as moral self-concept, moral self-image, or moral self-enhancement. There are abundant of evidence that people weigh morality heavily in evaluating others [] and evaluating the change of identity of others. These findings suggest that, given the importance of morality in social life, morality has been internalized in socialized individuals, and this internalized moral concept influence how they perceiving, remembering, and making decisions. 
+[Given the importance of morality in social life, moral character, i.e., the ...., is crucial for individual.] More specially, a person needs to both accurately evaluate whether the moral character of others and behave in a way that she is perceived as a moral person, or at least not a morally bad person. The former was usually investigated as person perception in social psychology while the latter was studied separately as moral self-concept, moral self-image, or moral self-enhancement. There are abundant of evidence that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others []. These findings suggest that, given the importance of morality in social life, morality has been internalized in socialized individuals, and this internalized moral concept influence how they perceiving, remembering, and making decisions. 
 
-When it comes to self perception, there is also accumulating evidence that people have motivation to maintain a good moral-self concept. For example, there exists a significant self-enhancement effect in morality, which is stronger than self-enhancement effect in other domains, such as competence or social competence [@tappin_illusion_2017]. Also, participants try to maintain their moral self image even after their own unethical behaviors (e.g., cheating)[]. similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things []. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example,  recent research found that self-enhancement effect is stronger than that in other domains, such as competence or social competence [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things []. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
 
-[whether moral character information started to influence our perception is unknown, exp1a, b, c, and exp2] Yet, as @freeman_dynamic_2011 put it, the focus of the previous studies is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, the perceptual decision-making process of moral related information (about self and others) were less studied. Without knowledge of these processes work, we can not have a full picture of how moral information is processed in our cognition. Recently, there is a increasingly larger body of literature revealed that perception is strongly influenced by social factors, such as group-categorization, stereotype [@xiao_perceiving_2016]. Given the importance of moral character, one might expect that moral character related information can also bias cognitive processes, such as attention, perception, and learning and memory. Indeed, previous studies have found that moral related words more likely to pop-out [@gantman_moral_2014, but see @], and are easier to be remembered [@stanley_moral_2019]. When it comes to moral character, studies also revealed that memories retrieval are biased by their relevance to moral self-image and that this effect is modulated by the motivation of maintaining a positive moral self-image [@carlson_motivated_2020]. 
+[whether moral character information influence perception?, link to exp1a, b, c, and exp2] Yet, as @freeman_dynamic_2011 put it, the focus of the previous studies is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after, e.g., impression, evaluation. That is, current studies on person perception is studies without perceptual process. In other words, the perceptual decision-making process of moral character related information is unknown. Without knowledge of these processes work, we can not have a full picture of how moral information is processed in our cognition. As increasing attention paid to perceptual process of social perception, it's clear that perceptual decision-making is strongly influenced by social factors, such as group-categorization, stereotype [@xiao_perceiving_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual decision-making.
 
-[using associative learning task to study the moral character's influence on perception] However, the lower-level perceptual process of moral character related information, which is the mechanism that produced those social cognitive phenomena, is still unknown. There are a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is only part of the morality [Haidt 2007]. Given that that moral character is a high-level and hidden state instead of observable feature, one ways to study the perceptual process of moral character is using concrete moral behaviors. That is, we infer that moral character impact perceptual decision-making if we observed how different moral behaviors influence the perceptual process. Previous studies in moral judgement has used different moral behaviors and other ecologically valid stimuli (e.g., face, or vignettes). Recent memory tasks also used those stimuli [], however, the idiosyncratic and heterogeneity of those stimuli might introduce large noise when it comes to perceptual process. 
+[using associative learning task to study the moral character's influence on perception] Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature, one also needs moral information, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They found that faces linked with "bad" social behavior are detected faster (but see). 
 
-An alternative might be using abstract concepts in language to study how these concepts influence perception. After all, abstract concept about moral character is part of our daily life and it can be used to identify useful constructs in social life []. For example, .... Therefore, It is possible to use abstract or semantic stimuli to study the perceptual process of moral character. As recent theoretical frameworks suggested, different levels of information formed a dynamic network in human brain and visual cues can activate more abstract, non-observable personal traits (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., a good person) is activated, it should also be able to have influence on perceptual process of the visual cues directly, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014]. If moral character information is an important social cue, then, as those other social cues (facial feature, clothing, etc), moral character related information might be prioritized in perceptual processing.
+An alternative is to use abstract semantic concepts to study how these concepts influence perception. After all, abstract concepts of moral character is part of our daily life and it can be used to identify useful constructs in social life. For example, .... Also, different levels of information may form a dynamic network in human brain and visual cues can activate more abstract, non-observable personal traits (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should also be able to have influence on perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014]. If moral character is an important social category, then, as those other social categories (races, education, etc, see @xiao_perceiving_2016), moral character related information might change the perceptual processes.
 
-Here, we use an associative learning paradigm to study the moral character. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the association between shapes and words, i.e., buid direct link between high-level, hidden moral character and visual cue. After they remembered the association, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but haven't been used in studying moral character. 
+Here, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the association between shapes and words, i.e. good-person and triangle, building direct association between high-level, hidden moral character and visual cue. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018]. 
 
-The first question is, whether the moral words used the in paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would predict this influence. The self associative learning paradigm might be able to studies this effect. To validate the the influence is indeed by the moral meaning of the words, we used four experiments to explore and validate the paradigm. All of these four experiment showed a robust effect of moral content. 
+Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment direct adopted associative paradigm and change the words from "self", "other" to "good-person", "neutral-person", and "bad-person". Then, we change the words to the ones that have more explicit moral meaning ("kind-person", "neutral-person", and "evil-person"). Then, as in @anderson_visual_2011, we asked participant to learn the behavioral history of three different names, and then use the names as moral character words. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral content. 
 
-[possible explanations: person-based self-categorization vs. stimuli-based valence] Then, we explored the underlying mechanism. Two theoretical frameworks are relevant here. The first one is valence theory, which emphasize the importance of valence in perceptual decision-making. Under this framework, the valence of the stimuli drives the perceptual decision-making. There exists three different sub-theories under this framework: Negativity effect, positivity effect, and valence effect. The first one might be the threaten detection theory, which predicted that threatening stimuli are preferentially processed because of the evolutionary advantage. Though appealing in the first glance, this threat-detection theory itself has been questioned for the evidence on which this theory was initially proposed. That is negative prioritized because of the low-level physical features of the stimuli []. given that the physical stimuli associated with moral character are manipulated in our study, we expect the low level feature will not play a role, and therefore we have a low a priori on the negative first prediction. The second prediction is positivist hypothesis, which predict that positive moral character will be prioritized. There are also evidence consistent with this idea. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. A third possibility is that both negative and positive is faster than neutral because of the valence. The underlying of the valence assumption is that the stimuli presented in the associative task (word-shape pair) can elicit approaching-avoiding motivation. This probability of this assumption is true is low, because the all these stimuli do not have visual cue that really threatening or rewarding. Therefore, the difference in perceptual decision-making make reflect the value of the words to participants, which can be the interaction of the meaning of the words and the participants' idiosyncratic characteristics. 
+[possible explanations: person-based self-categorization vs. stimuli-based valence] Then, we explored the underlying mechanism. Two theoretical frameworks are relevant here. The first one is valence theory, which emphasize the importance of valence in perceptual decision-making. Under this framework, the valence of the stimuli drives the perceptual decision-making. There exists three different sub-theories under this framework: Negativity effect, positivity effect, and valence effect. The first one might be the threaten detection theory, which predicted that threatening stimuli are preferentially processed because of the evolutionary advantage. Though appealing in the first glance, this threat-detection theory itself has been questioned for the evidence on which this theory was initially proposed. That is negative prioritized because of the low-level physical features of the stimuli []. given that the physical stimuli associated with moral character are manipulated in our study, we expect the low level feature will not play a role, and therefore we have a low a priori on the negative first prediction. The second prediction is positivity hypothesis, which predict that positive moral character will be prioritized. There are also evidence consistent with this idea. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. A third possibility is that both negative and positive is faster than neutral because of the valence. The underlying of the valence assumption is that the stimuli presented in the associative task (word-shape pair) can elicit approaching-avoiding motivation. This probability of this assumption is true is low, because the all these stimuli do not have visual cue that really threatening or rewarding. Therefore, the difference in perceptual decision-making make reflect the value of the words to participants, which can be the interaction of the meaning of the words and the participants' idiosyncratic characteristics. 
 
-Previous research converged that, if an object to be of value to an individual, then that object must be judged as relevant to that individual, i.e., self-relevance [@juechems_where_2019; @reicher_perception_2016]. There are two possible way an external stimuli be valuable (relevant) for an individual. First, we might evaluate its rewarding-threatening value, as many previous perceptual research had done. Second, we may apply social categorization when the stimuli is a person, i.e., we categorize whether the person is in the same group as we do. As we only found a positivity effect when using moral characters as stimuli. Moreover, there are evidence for both reward [@Sui_2012_JEPHPP] and in-group [@enock_self_2018] prioritization in the self-tagging paradigm. Thus, we can not distinguish those two different way of self-relevance. 
+Previous research converged that, if an object to be of value to an individual, then that object must be judged as relevant to that individual, i.e., self-relevance [@juechems_where_2019; @reicher_perception_2016]. There are two possible way an external stimuli be valuable (relevant) for an individual. First, we might evaluate its rewarding-threatening value, as many previous perceptual research had done. In this explanation, we will view the moral character and the person behind the moral character, as objects and only judge whether they are rewarding or potentially rewarding to us. A different view is that we will still perceive those moral character as human and apply social categorization, i.e., we categorize whether the person behind the moral character is in the same group as we do. However, the above four experiments can not distinguish between these two possibilities, because there are evidence for both reward [@Sui_2012_JEPHPP] and in-group [@enock_self_2018] prioritization.  
 
-[Distinguish two explanations by make self salient, and found relative adv of self: exp3a, 3b, 6b] Though these two framework has similar prediction for the studies with moral character such as "good-person", "neutral person", and "bad person", they have different prediction when if the experiment design include both identity and moral valence. With an orthogonal design, we have good, bad, and neutral conditions for both self and other. In this case the identity become salient and participants are less likely to spontaneously identify good-person as self, but the value of good-person still exists. This means that the self-expanding theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of neutral or bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
+[Distinguish two explanations by make self salient, and found relative adv of self: exp3a, 3b, 6b] Though these two framework has similar prediction for the studies with moral character such as "good-person", "neutral person", and "bad person", they have different prediction when if the experiment design include both identity and moral valence. With an orthogonal design, we have good, bad, and neutral conditions for both self and other. In this case the identity become salient and participants are less likely to spontaneously identify good-person as self, but the value of good-person still exists. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of neutral or bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
 
-Using exp 3a and 3b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute.
+In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A meta-analysis showed that there was no effect of valence when the identity is other.
 
-[what we care? valence of the self exp4a or identity of the good exp4b?] Next, we need to zoom in on the categorization: self is the anchor or good is the anchor? self is the anchor, then, id (self) has stronger influence on moral character (good-person) than moral character has on id. In other words, when identity is ambiguous, people categorize good person as self, when moral valence is ambiguous, people are less affected. i.e., for exp 4a (id is clear, valence is ambiguous), the valence effect (good self vs neutral self) is weaker than the id effect of id (good self vs good other) in exp 4b (valence is clear, id is ambiguous).
+[what we care? valence of the self exp4a or identity of the good exp4b?] Next, we go further to disentangle the self-good complex: people care more about whether the self is good, or whether the good is self, or both? If people care more about whether the self is good, then, subtle cue of the valence may have an impact on perceptual process of the self. In contrast, if people care more about whether the good's identity, i.e., whether the good is self, then subtle cue of identity (self v. other) may have a impact on percpetual process of the good. We tested the good-self complex with two more experiments. In exp 4a (id is task-relevant, valence is task-irrelevant), if people care about the valence of the self, then, the task-irrelevant information may influence the processing of the self. While in exp 4b (valence is task-relevant, id is task-irrelevant), if people care about the id of the good, then, the task-irrelevant id information will has a influence on the process of the good.
 
-[whether categorize self as positive is not limited to morality, but other traits, yet not state] Self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance. 
+[whether categorize self as positive is not limited to morality? no, but limited to traits, yet not state] Self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance. 
 
 [Self-bad as an index of self-reported self-categorization in moral term]
 
-
+Below are just my thoughts
 Still need to thinking about the relationship between several key concepts: self-categorization, morality (moral character), perceptual decision-making, interactive dynamic theory.
 
 As previous studies in social psychology and cognitive psychology found the perceiving self and perceiving others has huge difference, therefore, a question immediately followed is, how the self- and other-related moral character information are processed in perceptual decision-making. To investigate this phenomenon, we included both self- and other-related moral character information in the self-tagging paradigm. abstract moral concepts are prioritized in perceptual decision-making? There are several possible predictions. 
 
-*Self-categories* are cognitive groupings of self and some class of stimuli as identical or different from some other class. 
+*Self-categories* are cognitive groupings of self and some class of stimuli as identical or different from some other class. [Turner et al.]
 *Personal identity* refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
 *Social identity* refers to the shared social categorical self ("us" vs. "them").
 
@@ -122,51 +124,14 @@ variable self and morality in perception. self is variable, morality is basic, t
 
 categorization based on morality and variable self/identity
 
-However, the above prediction was based on vague theory that are not strongly linked with the prediction []. To make stronger theoretical prediction, we listed our implicit assumptions of our prediction.
-
-In our experimental setting, we have the following assumptions, these assumption is not ecologically valid, but can help us to reveal some interesting part of the phenomena:
-(1) The semantic concept of moral character can activate the moral character concept in people's mind. Or at least partially.
-(2) Visual stimuli associated with moral character can serve a the visual cue for that moral character in the current task: perceptual matching. (repeated recognition?)
-(3) The perceptual decision-making will show certain pattern under certain task demand. In our case, it's the forced, speed, two-option choice task.
-
-Additional assumption about the self-moral id:
-(5) People will automatically enhance their moral concept, therefore prefer the positive moral self-concept.
-
 What is the prediction of the model/theory?
-
-Valence; valence is self-relevance in effect. But how self-relevance works? Two possibility: assimilation, i.e., include moral character in the self-concept; dissimilation, i.e., view the people of different moral character as alien to self and assessing it's threaten or collaborative value.  Both mechanisms works but may of different strength in different situation. one possibility is that they are categorized by self-relatedness or self-similarity (psychological distance between participants) or personal construal based on abstract concept [@freeman_dynamic_2011]. what is the differences between the self-related and other-related moral character concepts are processed? is the perception of moral character of others related to the self?
-
-(new idea: categorize based on newly acquired social feature vs. based on physical features, color, shape, etc; dimension of social cognition in language: not only about the distinctiveness of the words, but also the overlapping between them; Reaction times in judging those faces in PSA001). 
-
-self-categorization and identity fusion
 
 Identification: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
 
 People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
 
-It's less known, however, how the moral self-image related information is processed at the first lower cognitive stage, for example, in perceptual process where participant need to decide their priority of information processing who the information should be processed. Though rarely appeared in moral related studies, the role of perception in understanding our cognition had been long root in psychology, social psychology is not exceptional. In 1950s, @bruner_perceptual_1957 had proposed the "New Look" approach of perception, which was resurrected by accumulating evidence [@stolier_functional_2016; @xiao_perceiving_2016]. These studies supported the view that there is a bidirectional interplay between perception and higher-level cognition, such as stereotype [@stolier_functional_2016; @xiao_perceiving_2016], and self-relevance [@Sui_2012_JEPHPP]. Few studies also tested whether moral-laden information was prioritized in the perception [@anderson_visual_2011; @gantman_moral_2014]. Still, the moral self-image information has rarely been studied (except @Hu_2020_GoodSelf).
+In 1950s, @bruner_perceptual_1957 had proposed the "New Look" approach of perception, which was resurrected by accumulating evidence [@stolier_functional_2016; @xiao_perceiving_2016]. These studies supported the view that there is a bidirectional interplay between perception and higher-level cognition, such as stereotype [@stolier_functional_2016; @xiao_perceiving_2016], and self-relevance [@Sui_2012_JEPHPP]. Few studies also tested whether moral-laden information was prioritized in the perception [@anderson_visual_2011; @gantman_moral_2014]. Still, the moral self-image information has rarely been studied (except @Hu_2020_GoodSelf).
 
-It's logically followed, then, that the self-related moral information might be prioritized in perception.
-
-Morally good is important because it's a signal for cooperation, so it might influence perceptual processing.
-Moral character is self-referential or self-referential moral character has a stronger effect?
-especially when it is self-relevant. why? because self-relevant is the root of all values, without self-relevance, there will be no value at all. So we need two have two-layer framework: 1st, morally good is important, 2nd, morally good is important mainly when it is self-relevant.
-
-These observation supported the view that the motivation of maintaining a positive self-image, especially on the aspect that are crucial to oneself [], can distort the cognitive processing [Greenwarld, 1988]. All the available model and evidence suggest that this positive self motivation also impact our perception processing.
-
-To test this hypothesis, we adopted a self-tagging paradigm. 
-
-Outline:
-
-Perceptual decision-making is an important window for understanding the cognition [@shadlen_decision_2013], it's also has bi-directional interplay with higher-level cognition [@gilbert_top-down_2013; @bruner_perceptual_1957]. Recently, there are accumulating evidence that perception also has bidirectional interplay with social cognition, such as morality [@anderson_visual_2011; @gantman_moral_2014], stereotype [@stolier_functional_2016; @xiao_perceiving_2016], and self-relevance [@Sui_2012_JEPHPP].
-
-One important feature of perception is the salience of the stimuli around us. Previous studies showed that emotional stimuli are salient and are prioritized. However, important modulate is whether the stimuli is self-relevant when they are physically and emotional equally salient. 
-
-Here we investigated how the instantly learned moral valence changed the perceptual decision-making and the underlying psychological processes.
-
-Given the importance of morality in social life [@descioli_side-taking_2016] and identity [@freitas_origins_2017; @strohminger_true_2017; @zhang_authentic_2019], and evidence that moral character impacts how people evaluate themselves [XXXX], desired personality change (Sun & Goodwin, 2020), memory (Carlson, Maréchal, Oud, Fehr, & Crockett, 2020; Kouchaki & Gino, 2016; Shu, Gino, & Bazerman, 2011; Stanley & De Brigard, 2019), one would expect that moral character, the morality related trait, will also reflected in perceptual decision-making. Yet, this effect was less studied . This moral perception effect was driven by motivation [@gantman_exposure_2016] and influenced the information spreading online [@brady_attentional_2020]. Especially lacking is the process of this effect. 
-
-The current study first explored and confirmed a positive effect of moral character in perceptual decision-making, using an associative learning task, then attempted to provide a mechanistic explanation for this positivity effect: spontaneous self-identification with the moral good character (@juechems_where_2019: Self-relevance is an important dimension in determine the value, i.e., intrinsic goal), both implicitly and explicitly. Finally, this positivity  effect was also found in other social traits (beauty) but not non-social, emotional states.
 
 Potential theoretical discussion points:
 Close distance of the semantic representation of self and moral character (attractor network) (Freeman & Ambady, 2011).
@@ -174,7 +139,13 @@ The core/true/authentic self concept.
 social meter theory of self-esteem.
 evolutionary perspective of morality and moral self-conception, moral identity.
 
-We reported behavioral results from eleven experiments. In first set of experiments, we found that shapes associated with morally positive person label were responded faster and more accurately. In the second set of experiments, we explore the potential role of good self in perceptual matching task and added one more independent variable, we found that the effect was mainly on good self. In the third part we tested whether the morality will automatically binds with self but not other. Finally, we explore the correlation between behavioral task and questionnaire scores.
+In our experimental setting, we have the following limitations:
+The perceptual decision-making will show certain pattern under certain task demand. In our case, it's the forced, speed, two-option choice task.
+
+Additional assumption about the self-moral id:
+People will automatically enhance their moral concept, therefore prefer the positive moral self-concept.
+
+
 
 # Disclosures
 We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.  
