--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -149,29 +149,63 @@ To navigate in a complex social world, individual has learnt to prioritize valua
 \begin{document}
 \maketitle
 
-\# Introduction
+\hypertarget{introduction}{%
+\section{Introduction}\label{introduction}}
 
-Morality is the central of social life, regardless of the culture. It's so entrenched in the social life that one basic dimension of social perception is morality, i.e., whether a person is moral good or not. Also, morality is the most defining trait of a person. In the same vein, to succeed navigate in the social world, one has to consistently maintain a good moral reputation, i.e., moral self-image (to self), moral character (to others), because moral character of a person may determine whether she/he can find potential cooperators in the social world. This motivation may have strong influence on individual's behavioral and mind. For example, across three social domains, morality, social competence, and competence, people have the strongest self-enhancement effect in morality domain. Previously studies revealed that people can maintain their moral self image even after their own unethical behaviors (e.g., cheating). Also, when asked how likely they will do ethical or unethical things, most participants showed the tendency of less likely to do unethical things {[}{]}. Thus, the importance of morality in social life and most of adults are socialized individual, moral character is an dispensable part of their identity, the one that one need to maintain, even through self-deception.
+{[}sentences in bracket are key ideas{]}
 
-From the information processing perspective, it is interesting, then, how moral self-image related information were processed by individuals? One might expect that the self-related moral information is more likely to be processed, elaborated, and perserved, so that the available information to the participant are more likely to consistent with one's expectation: good self! Indeed, recent studies found that memories retrieved are biased by their relevance to moral self-image and that this effect is modulated by the motivation of maintaining a positive moral self-image {[}{]}.
+{[}Morality is the central of human social life{]}. Its importance is manifested in many ways in human cognition. For example, morality is a basic dimension of person perception (Abele, Ellemers, Fiske, Koch, \& Yzerbyt, 2020; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014; Willis \& Todorov, 2006), moral judgment is common in daily life {[}{]}.
 
-It's less known, however, how the moral self-image related information is processed at the first lower cognitive stage, for example, in perceptual process where participant need to decide their priority of information processing who the information should be processed. Though rarely appeared in moral related studies, the role of perception in understanding our cognition had been long root in psychology, social psychology is not exceptional. In 1950s, Bruner (1957) had proposed the \enquote{New Look} approach of perception, which was resurrected by accumulating evidence (Stolier \& Freeman, 2016; Xiao, Coppin, \& Bavel, 2016). These studies supported the view that there is a bidirectional interplay between perception and higher-level cognition, such as stereotype (Stolier \& Freeman, 2016; Xiao et al., 2016), and self-relevance (Sui, He, \& Humphreys, 2012). Few studies also tested whether moral-laden information was prioritized in the perception (Anderson et al., 2011; Gantman \& Van Bavel, 2014). Still, the moral self-image information has rarely been studied (except Hu, Lan, Macrae, and Sui (2020))
+{[}Given the importance of morality in social life, moral character, i.e., the \ldots., is crucial for individual.{]} More specially, a person needs to both accurately evaluate whether the moral character of others and behave in a way that she is perceived as a moral person, or at least not a morally bad person. The former was usually investigated as person perception in social psychology while the latter was studied separately as moral self-concept, moral self-image, or moral self-enhancement. There are abundant of evidence that people weigh morality heavily in evaluating others (Goodwin, 2015) and evaluating the change of identity of others {[}{]}. These findings suggest that, given the importance of morality in social life, morality has been internalized in socialized individuals, and this internalized moral concept influence how they perceiving, remembering, and making decisions.
 
-These observation supported the view that the motivation of maintaining a positive self-image, especially on the aspect that are crucial to oneself {[}{]}, can distort the cognitive processing {[}Greenwarld, 1988{]}. All the available model and evidence suggest that this positive self motivation also impact our perception processing.
+When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in other domains, such as competence or social competence (Tappin \& McKay, 2017). Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating){[}{]}. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things {[}{]}. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
 
-To test this hypothesis, we adopted a self-tagging paradigm.
+{[}whether moral character information influence perception?, link to exp1a, b, c, and exp2{]} Yet, as Freeman and Ambady (2011) put it, the focus of the previous studies is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after, e.g., impression, evaluation. That is, current studies on person perception is studies without perceptual process. In other words, the perceptual decision-making process of moral character related information is unknown. Without knowledge of these processes work, we can not have a full picture of how moral information is processed in our cognition. As increasing attention paid to perceptual process of social perception, it's clear that perceptual decision-making is strongly influenced by social factors, such as group-categorization, stereotype (Xiao, Coppin, \& Bavel, 2016). Given the importance of moral character and that moral character related information has strong influence on learning and memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Stanley \& De Brigard, 2019), one might expect that moral character related information could also play a role in perceptual decision-making.
 
-Outline:
+{[}using associative learning task to study the moral character's influence on perception{]} Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face (e.g., Dzhelyova, Perrett, \& Jentzsch, 2012), but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature, one also needs moral information, e.g., behavior history, to infer moral character of a person. For example, Anderson et al. (2011) asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They found that faces linked with \enquote{bad} social behavior are detected faster (but see).
 
-Perceptual decision-making is an important window for understanding the cognition (Shadlen \& Kiani, 2013), it's also has bi-directional interplay with higher-level cognition (Bruner, 1957; Gilbert \& Li, 2013). Recently, there are accumulating evidence that perception also has bidirectional interplay with social cognition, such as morality (Anderson et al., 2011; Gantman \& Van Bavel, 2014), stereotype (Stolier \& Freeman, 2016; Xiao et al., 2016), and self-relevance (Sui et al., 2012).
+An alternative is to use abstract semantic concepts to study how these concepts influence perception. After all, abstract concepts of moral character is part of our daily life and it can be used to identify useful constructs in social life. For example, \ldots. Also, different levels of information may form a dynamic network in human brain and visual cues can activate more abstract, non-observable personal traits (e.g., aggressiveness) (Amodio, 2019; Freeman \& Ambady, 2011). If a concept of moral character (e.g., good person) is activated, it should also be able to have influence on perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster (Gantman \& Van Bavel, 2014). If moral character is an important social category, then, as those other social categories (races, education, etc, see Xiao et al. (2016)), moral character related information might change the perceptual processes.
 
-One important feature of perception is the salience of the stimuli around us. Previous studies showed that emotional stimuli are salient and are prioritized. However, important modulate is whether the stimuli is self-relevant when they are physically and emotional equally salient.
+Here, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the association between shapes and words, i.e.~good-person and triangle, building direct association between high-level, hidden moral character and visual cue. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group (Enock, Sui, Hewstone, \& Humphreys, 2018).
 
-Here we investigated how the instantly learned moral valence changed the perceptual decision-making and the underlying psychological processes.
+Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment direct adopted associative paradigm and change the words from \enquote{self}, \enquote{other} to \enquote{good-person}, \enquote{neutral-person}, and \enquote{bad-person}. Then, we change the words to the ones that have more explicit moral meaning (\enquote{kind-person}, \enquote{neutral-person}, and \enquote{evil-person}). Then, as in Anderson et al. (2011), we asked participant to learn the behavioral history of three different names, and then use the names as moral character words. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral content.
 
-Given the importance of morality in social life (DeScioli, 2016) and identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017; Zhang, Chen, Schlegel, Hicks, \& Chen, 2019), and evidence that moral character impacts how people evaluate themselves {[}XXXX{]}, desired personality change (Sun \& Goodwin, 2020), memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Kouchaki \& Gino, 2016; Shu, Gino, \& Bazerman, 2011; Stanley \& De Brigard, 2019), one would expect that moral character, the morality related trait, will also reflected in perceptual decision-making. Yet, this effect was less studied . This moral perception effect was driven by motivation (Gantman \& Van Bavel, 2016) and influenced the information spreading online (Brady, Gantman, \& Van Bavel, 2020). Especially lacking is the process of this effect.
+{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} Then, we explored the underlying mechanism. Two theoretical frameworks are relevant here. The first one is valence theory, which emphasize the importance of valence in perceptual decision-making. Under this framework, the valence of the stimuli drives the perceptual decision-making. There exists three different sub-theories under this framework: Negativity effect, positivity effect, and valence effect. The first one might be the threaten detection theory, which predicted that threatening stimuli are preferentially processed because of the evolutionary advantage. Though appealing in the first glance, this threat-detection theory itself has been questioned for the evidence on which this theory was initially proposed. That is negative prioritized because of the low-level physical features of the stimuli {[}{]}. given that the physical stimuli associated with moral character are manipulated in our study, we expect the low level feature will not play a role, and therefore we have a low a priori on the negative first prediction. The second prediction is positivity hypothesis, which predict that positive moral character will be prioritized. There are also evidence consistent with this idea. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. A third possibility is that both negative and positive is faster than neutral because of the valence. The underlying of the valence assumption is that the stimuli presented in the associative task (word-shape pair) can elicit approaching-avoiding motivation. This probability of this assumption is true is low, because the all these stimuli do not have visual cue that really threatening or rewarding. Therefore, the difference in perceptual decision-making make reflect the value of the words to participants, which can be the interaction of the meaning of the words and the participants' idiosyncratic characteristics.
 
-The current study first explored and confirmed a positive effect of moral character in perceptual decision-making, using an associative learning task, then attempted to provide a mechanistic explanation for this positivity effect: spontaneous self-identification with the moral good character (Juechems and Summerfield (2019): Self-relevance is an important dimension in determine the value, i.e., intrinsic goal), both implicitly and explicitly. Finally, this positivity effect was also found in other social traits (beauty) but not non-social, emotional states.
+Previous research converged that, if an object to be of value to an individual, then that object must be judged as relevant to that individual, i.e., self-relevance (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016). There are two possible way an external stimuli be valuable (relevant) for an individual. First, we might evaluate its rewarding-threatening value, as many previous perceptual research had done. In this explanation, we will view the moral character and the person behind the moral character, as objects and only judge whether they are rewarding or potentially rewarding to us. A different view is that we will still perceive those moral character as human and apply social categorization, i.e., we categorize whether the person behind the moral character is in the same group as we do. However, the above four experiments can not distinguish between these two possibilities, because there are evidence for both reward (Sui, He, \& Humphreys, 2012) and in-group (Enock et al., 2018) prioritization.
+
+{[}Distinguish two explanations by make self salient, and found relative adv of self: exp3a, 3b, 6b{]} Though these two framework has similar prediction for the studies with moral character such as \enquote{good-person}, \enquote{neutral person}, and \enquote{bad person}, they have different prediction when if the experiment design include both identity and moral valence. With an orthogonal design, we have good, bad, and neutral conditions for both self and other. In this case the identity become salient and participants are less likely to spontaneously identify good-person as self, but the value of good-person still exists. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of neutral or bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as \enquote{self} while all the others categories were excluded.
+
+In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e.~the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A meta-analysis showed that there was no effect of valence when the identity is other.
+
+{[}what we care? valence of the self exp4a or identity of the good exp4b?{]} Next, we go further to disentangle the self-good complex: people care more about whether the self is good, or whether the good is self, or both? If people care more about whether the self is good, then, subtle cue of the valence may have an impact on perceptual process of the self. In contrast, if people care more about whether the good's identity, i.e., whether the good is self, then subtle cue of identity (self v. other) may have a impact on percpetual process of the good. We tested the good-self complex with two more experiments. In exp 4a (id is task-relevant, valence is task-irrelevant), if people care about the valence of the self, then, the task-irrelevant information may influence the processing of the self. While in exp 4b (valence is task-relevant, id is task-irrelevant), if people care about the id of the good, then, the task-irrelevant id information will has a influence on the process of the good.
+
+{[}whether categorize self as positive is not limited to morality? no, but limited to traits, yet not state{]} Self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance.
+
+{[}Self-bad as an index of self-reported self-categorization in moral term{]}
+
+Below are just my thoughts
+Still need to thinking about the relationship between several key concepts: self-categorization, morality (moral character), perceptual decision-making, interactive dynamic theory.
+
+As previous studies in social psychology and cognitive psychology found the perceiving self and perceiving others has huge difference, therefore, a question immediately followed is, how the self- and other-related moral character information are processed in perceptual decision-making. To investigate this phenomenon, we included both self- and other-related moral character information in the self-tagging paradigm. abstract moral concepts are prioritized in perceptual decision-making? There are several possible predictions.
+
+\emph{Self-categories} are cognitive groupings of self and some class of stimuli as identical or different from some other class. {[}Turner et al.{]}
+\emph{Personal identity} refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
+\emph{Social identity} refers to the shared social categorical self (\enquote{us} vs.~\enquote{them}).
+
+\emph{variable self}: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as \enquote{other} or as part of the extended \enquote{we} self) is different in different settings.
+
+variable self and morality in perception. self is variable, morality is basic, the point is: how moral other is perceive as extension of self, not reverse.
+
+categorization based on morality and variable self/identity
+
+What is the prediction of the model/theory?
+
+Identification: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
+
+People are more likely to identify themselves with trustworthy faces (Verosky \& Todorov, 2010) (trustworthy faces has longer RTs).
+
+In 1950s, Bruner (1957) had proposed the \enquote{New Look} approach of perception, which was resurrected by accumulating evidence (Stolier \& Freeman, 2016; Xiao et al., 2016). These studies supported the view that there is a bidirectional interplay between perception and higher-level cognition, such as stereotype (Stolier \& Freeman, 2016; Xiao et al., 2016), and self-relevance (Sui et al., 2012). Few studies also tested whether moral-laden information was prioritized in the perception (Anderson et al., 2011; Gantman \& Van Bavel, 2014). Still, the moral self-image information has rarely been studied (except Hu et al. (2020)).
 
 Potential theoretical discussion points:
 Close distance of the semantic representation of self and moral character (attractor network) (Freeman \& Ambady, 2011).
@@ -179,7 +213,11 @@ The core/true/authentic self concept.
 social meter theory of self-esteem.
 evolutionary perspective of morality and moral self-conception, moral identity.
 
-We reported behavioral results from eleven experiments. In first set of experiments, we found that shapes associated with morally positive person label were responded faster and more accurately. In the second set of experiments, we explore the potential role of good self in perceptual matching task and added one more independent variable, we found that the effect was mainly on good self. In the third part we tested whether the morality will automatically binds with self but not other. Finally, we explore the correlation between behavioral task and questionnaire scores.
+In our experimental setting, we have the following limitations:
+The perceptual decision-making will show certain pattern under certain task demand. In our case, it's the forced, speed, two-option choice task.
+
+Additional assumption about the self-moral id:
+People will automatically enhance their moral concept, therefore prefer the positive moral self-concept.
 
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
@@ -1405,11 +1443,14 @@ We also explored the correlation between behavioral data and questionnaire score
 \setlength{\leftskip}{0.5in}
 
 \hypertarget{refs}{}
+\leavevmode\hypertarget{ref-abele_navigating_2020}{}%
+Abele, A. E., Ellemers, N., Fiske, S. T., Koch, A., \& Yzerbyt, V. (2020). Navigating the social world: Toward an integrated framework for evaluating self, individuals, and groups. \emph{Psychological Review}. \url{https://doi.org/10.1037/rev0000262}
+
+\leavevmode\hypertarget{ref-amodio_social_2019}{}%
+Amodio, D. M. (2019). Social cognition 2.0: An interactive memory systems account. \emph{Trends in Cognitive Sciences}, \emph{23}(1), 21--33. \url{https://doi.org/10.1016/j.tics.2018.10.002}
+
 \leavevmode\hypertarget{ref-anderson_visual_2011}{}%
 Anderson, E., Siegel, E. H., Bliss-Moreau, E., \& Barrett, L. F. (2011). The visual impact of gossip. \emph{Science}, \emph{332}(6036), 1446--1448. \url{https://doi.org/10.1126/science.1201574}
-
-\leavevmode\hypertarget{ref-brady_attentional_2020}{}%
-Brady, W. J., Gantman, A. P., \& Van Bavel, J. J. (2020). Attentional capture helps explain why moral and emotional content go viral. \emph{Journal of Experimental Psychology: General}, \emph{149}(4), 746--756. \url{https://doi.org/10.1037/xge0000673}
 
 \leavevmode\hypertarget{ref-Brainard_1997}{}%
 Brainard, D. H. (1997). The psychophysics toolbox. \emph{Spatial Vision}, \emph{10}(4), 433--436. Journal Article.
@@ -1420,6 +1461,9 @@ Bruner, J. S. (1957). On perceptual readiness. \emph{Psychological Review}, \emp
 \leavevmode\hypertarget{ref-Buxfcrkner_2017}{}%
 Bürkner, P.-C. (2017). Brms: An r package for bayesian multilevel models using stan. \emph{Journal of Statistical Software; Vol 1, Issue 1 (2017)}. Journal Article. Retrieved from \url{https://www.jstatsoft.org/v080/i01\%0Ahttp://dx.doi.org/10.18637/jss.v080.i01}
 
+\leavevmode\hypertarget{ref-carlson_motivated_2020}{}%
+Carlson, R. W., Maréchal, M. A., Oud, B., Fehr, E., \& Crockett, M. J. (2020). Motivated misremembering of selfish decisions. \emph{Nature Communications}, \emph{11}(1), 2100. \url{https://doi.org/10.1038/s41467-020-15602-4}
+
 \leavevmode\hypertarget{ref-Carpenter_2017_stan}{}%
 Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M., \ldots{} Riddell, A. (2017). Stan: A probabilistic programming language. \emph{Journal of Statistical Software}, \emph{76}(1). Journal Article. \url{https://doi.org/10.18637/jss.v076.i01}
 
@@ -1429,26 +1473,29 @@ Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of res
 \leavevmode\hypertarget{ref-DeCarlo_1998}{}%
 DeCarlo, L. T. (1998). Signal detection theory and generalized linear models. \emph{Psychological Methods}, \emph{3}(2), 186--205. Journal Article. \url{https://doi.org/10.1037/1082-989X.3.2.186}
 
-\leavevmode\hypertarget{ref-descioli_side-taking_2016}{}%
-DeScioli, P. (2016). The side-taking hypothesis for moral judgment. \emph{Current Opinion in Psychology}, \emph{7}, 23--27. \url{https://doi.org/10.1016/j.copsyc.2015.07.002}
+\leavevmode\hypertarget{ref-dzhelyova_temporal_2012}{}%
+Dzhelyova, M., Perrett, D. I., \& Jentzsch, I. (2012). Temporal dynamics of trustworthiness perception. \emph{Brain Research}, \emph{1435}, 81--90. \url{https://doi.org/10.1016/j.brainres.2011.11.043}
+
+\leavevmode\hypertarget{ref-enock_self_2018}{}%
+Enock, F., Sui, J., Hewstone, M., \& Humphreys, G. W. (2018). Self and team prioritisation effects in perceptual matching: Evidence for a shared representation. \emph{Acta Psychologica}, \emph{182}, 107--118. \url{https://doi.org/10.1016/j.actpsy.2017.11.011}
 
 \leavevmode\hypertarget{ref-faul_statistical_2009}{}%
 Faul, F., Erdfelder, E., Buchner, A., \& Lang, A.-G. (2009). Statistical power analyses using g*Power 3.1: Tests for correlation and regression analyses. \emph{Behavior Research Methods}, \emph{41}(4), 1149--1160. \url{https://doi.org/10.3758/BRM.41.4.1149}
 
-\leavevmode\hypertarget{ref-freitas_origins_2017}{}%
-Freitas, J. D., Cikara, M., Grossmann, I., \& Schlegel, R. (2017). Origins of the belief in good true selves. \emph{Trends in Cognitive Sciences}, \emph{21}(9), 634--636. \url{https://doi.org/10.1016/j.tics.2017.05.009}
+\leavevmode\hypertarget{ref-freeman_dynamic_2011}{}%
+Freeman, J. B., \& Ambady, N. (2011). A dynamic interactive theory of person construal. \emph{Psychological Review}, \emph{118}(2), 247--279. \url{https://doi.org/10.1037/a0022327}
 
 \leavevmode\hypertarget{ref-gantman_moral_2014}{}%
 Gantman, A. P., \& Van Bavel, J. J. (2014). The moral pop-out effect: Enhanced perceptual awareness of morally relevant stimuli. \emph{Cognition}, \emph{132}(1), 22--29. \url{https://doi.org/10.1016/j.cognition.2014.02.007}
 
-\leavevmode\hypertarget{ref-gantman_exposure_2016}{}%
-Gantman, A. P., \& Van Bavel, J. J. (2016). Exposure to justice diminishes moral perception. \emph{Journal of Experimental Psychology: General}, \emph{145}(12), 1728--1739. \url{https://doi.org/10.1037/xge0000241}
-
-\leavevmode\hypertarget{ref-gilbert_top-down_2013}{}%
-Gilbert, C. D., \& Li, W. (2013). Top-down influences on visual processing. \emph{Nature Reviews Neuroscience}, \emph{14}(5), 350--363. \url{https://doi.org/10.1038/nrn3476}
-
 \leavevmode\hypertarget{ref-Goh_2016_mini}{}%
 Goh, J. X., Hall, J. A., \& Rosenthal, R. (2016). Mini meta-analysis of your own studies: Some arguments on why and a primer on how. \emph{Social and Personality Psychology Compass}, \emph{10}(10), 535--549. Journal Article. \url{https://doi.org/10.1111/spc3.12267}
+
+\leavevmode\hypertarget{ref-goodwin_moral_2015}{}%
+Goodwin, G. P. (2015). Moral character in person perception. \emph{Current Directions in Psychological Science}, \emph{24}(1), 38--44. \url{https://doi.org/10.1177/0963721414550709}
+
+\leavevmode\hypertarget{ref-goodwin_moral_2014}{}%
+Goodwin, G. P., Piazza, J., \& Rozin, P. (2014). Moral character predominates in person perception and evaluation. \emph{Journal of Personality and Social Psychology}, \emph{106}(1), 148--168. \url{https://doi.org/10.1037/a0034726}
 
 \leavevmode\hypertarget{ref-Hu_2020_GoodSelf}{}%
 Hu, C.-P., Lan, Y., Macrae, C. N., \& Sui, J. (2020). Good me bad me: Does valence influence self-prioritization during perceptual decision-making? \emph{Collabra: Psychology}, \emph{6}(1), 20. Journal Article. \url{https://doi.org/10.1525/collabra.301}
@@ -1471,14 +1518,14 @@ McNeish, D., \& Wolf, M. G. (2020). Thinking twice about sum scores. \emph{Behav
 \leavevmode\hypertarget{ref-Pelli_1997}{}%
 Pelli, D. G. (1997). The videotoolbox software for visual psychophysics: Transforming numbers into movies. \emph{Spatial Vision}, \emph{10}(4), 437--442. Journal Article.
 
+\leavevmode\hypertarget{ref-reicher_perception_2016}{}%
+Reicher, S., \& Hopkins, N. (2016). Perception, action, and the social dynamics of the variable self. \emph{Psychological Inquiry}, \emph{27}(4), 341--347. \url{https://doi.org/10.1080/1047840X.2016.1217584}
+
 \leavevmode\hypertarget{ref-Rouder_2005_BHM_SDT}{}%
 Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models with an application in the theory of signal detection. \emph{Psychonomic Bulletin \& Review}, \emph{12}(4), 573--604. Journal Article. \url{https://doi.org/10.3758/bf03196750}
 
 \leavevmode\hypertarget{ref-Rousselet_2019}{}%
 Rousselet, G. A., \& Wilcox, R. R. (2019). Reaction times and other skewed distributions: Problems with the mean and the median. \emph{Meta-Psychology}. preprint. \url{https://doi.org/10.1101/383935}
-
-\leavevmode\hypertarget{ref-shadlen_decision_2013}{}%
-Shadlen, M. N., \& Kiani, R. (2013). Decision making as a window on cognition. \emph{Neuron}, \emph{80}(3), 791--806. \url{https://doi.org/10.1016/j.neuron.2013.10.047}
 
 \leavevmode\hypertarget{ref-Simmons_2013_life}{}%
 Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Conference Proceedings. \url{https://doi.org/10.2139/ssrn.2205186}
@@ -1486,23 +1533,29 @@ Simmons, J. P., Nelson, L. D., \& Simonsohn, U. (2013). Life after p-hacking. Co
 \leavevmode\hypertarget{ref-Stanislaw_Todorov_1999}{}%
 Stanislaw, H., \& Todorov, N. (1999). Calculation of signal detection theory measures. \emph{Behavior Research Methods, Instruments, \& Computers}, \emph{31}(1), 137--149. Journal Article. \url{https://doi.org/10.3758/BF03207704}
 
+\leavevmode\hypertarget{ref-stanley_moral_2019}{}%
+Stanley, M. L., \& De Brigard, F. (2019). Moral memories and the belief in the good self. \emph{Current Directions in Psychological Science}, \emph{28}(4), 387--391. \url{https://doi.org/10.1177/0963721419847990}
+
 \leavevmode\hypertarget{ref-stolier_functional_2016}{}%
 Stolier, R. M., \& Freeman, J. B. (2016). Functional and temporal considerations for top-down influences in social perception. \emph{Psychological Inquiry}, \emph{27}(4), 352--357. \url{https://doi.org/10.1080/1047840X.2016.1216034}
-
-\leavevmode\hypertarget{ref-strohminger_true_2017}{}%
-Strohminger, N., Knobe, J., \& Newman, G. (2017). The true self: A psychological concept distinct from the self: \emph{Perspectives on Psychological Science}. \url{https://doi.org/10.1177/1745691616689495}
 
 \leavevmode\hypertarget{ref-Sui_2012_JEPHPP}{}%
 Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salience: Evidence from self-prioritization effects on perceptual matching. \emph{Journal of Experimental Psychology: Human Perception and Performance}, \emph{38}(5), 1105--1117. Journal Article. \url{https://doi.org/10.1037/a0029792}
 
+\leavevmode\hypertarget{ref-tappin_illusion_2017}{}%
+Tappin, B. M., \& McKay, R. T. (2017). The illusion of moral superiority. \emph{Social Psychological and Personality Science}, \emph{8}(6), 623--631. \url{https://doi.org/10.1177/1948550616673878}
+
+\leavevmode\hypertarget{ref-verosky_differential_2010}{}%
+Verosky, S. C., \& Todorov, A. (2010). Differential neural responses to faces physically similar to the self as a function of their valence. \emph{NeuroImage}, \emph{49}(2), 1690--1698. \url{https://doi.org/10.1016/j.neuroimage.2009.10.017}
+
 \leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
 Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). HDDM: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
 
+\leavevmode\hypertarget{ref-willis_first_2006}{}%
+Willis, J., \& Todorov, A. (2006). First impressions: Making up your mind after a 100-ms exposure to a face. \emph{Psychological Science}, \emph{17}(7), 592--598. \url{https://doi.org/10.1111/j.1467-9280.2006.01750.x}
+
 \leavevmode\hypertarget{ref-xiao_perceiving_2016}{}%
 Xiao, Y. J., Coppin, G., \& Bavel, J. J. V. (2016). Perceiving the world through group-colored glasses: A perceptual model of intergroup relations. \emph{Psychological Inquiry}, \emph{27}(4), 255--274. \url{https://doi.org/10.1080/1047840X.2016.1199221}
-
-\leavevmode\hypertarget{ref-zhang_authentic_2019}{}%
-Zhang, H., Chen, K., Schlegel, R., Hicks, J., \& Chen, C. (2019). The authentic moral self: Dynamic interplay between perceived authenticity and moral behaviors in the workplace. \emph{Collabra: Psychology}, \emph{5}(1), 48. \url{https://doi.org/10.1525/collabra.260}
 
 \endgroup
 
